feat: Use Kmix as volumed

--- a/README.adoc
+++ b/README.adoc
@@ -2520,6 +2520,8 @@ exec xfce4-power-manager --no-daemon
 # pkill xfce4-volumed
 # exec xfce4-volumed --no-daemon
 
+pidof kmix >/dev/null 2>&1 || kmix
+
 pkill pasystray
 exec pasystray
 
