feat: flush, then close fd @ run-app-launcher

--- a/README.adoc
+++ b/README.adoc
@@ -2682,7 +2682,9 @@ proc getChoice {history execs} {
     set fd [open "| run-menu -dmenu -p \"Text: \" " r+]
     puts -nonewline $fd $history
     puts -nonewline $fd $execs
+    flush $fd
     set res [read $fd]
+    close $fd
     return [string trim $res]
 }
 
