feat: Support running without termux @ with-term-emu

--- a/README.adoc
+++ b/README.adoc
@@ -427,8 +427,7 @@ fi
 ----
 #!/usr/bin/env sh
 
-# exec term-emu -x with-termux "/usr/bin/env with-env-user $*" \; detach
-exec term-emu -e with-termux "/usr/bin/env with-env-user $*" \; detach
+exec term-emu with-termux "/usr/bin/env with-env-user $*" \; detach
 
 ----
 
