feat: Support running in detach mode, naming window & session @ with-term-emu

--- a/README.adoc
+++ b/README.adoc
@@ -406,6 +406,7 @@ exec "${term_emu_}" -e "$@"
 === `with-term-emu` - runs a command in a termimal emulator
 
 TODO: Document: with/out termux
+TODO: Document: session & window naming
 
 .file::with-term-emu
 [source,sh]
@@ -415,7 +416,13 @@ TODO: Document: with/out termux
 if [ "${WITHOUT_TERMUX}" = "1" ]; then
 	exec term-emu "/usr/bin/env with-env-user $*"
 else
-	exec term-emu with-termux "/usr/bin/env with-env-user $*"
+	session_name_="$*"
+	window_name_="${session_name_}"
+	if [ "${DETACH_TERMUX}" = "1" ]; then
+		exec term-emu with-termux -s "${session_name_}" -n "${window_name_}" "/usr/bin/env with-env-user $*" \; detach
+	else
+		exec term-emu with-termux -s "${session_name_}" -n "${window_name_}" "/usr/bin/env with-env-user $*"
+	fi
 fi
 
 ----
