feat: Make run-app-launcher use dispatch-action

--- a/README.adoc
+++ b/README.adoc
@@ -2732,23 +2732,7 @@ set choice [getChoice $history $execs]
 
 if {$choice ne ""} {
     addToHistory $historyFile $maxHistory $choice
-    switch -glob $choice {
-        "!@*" {
-            set cmd [string range $choice 2 end]
-            execl with-env-user [list with-term-emu-detach {*}$cmd]
-        }
-        "!!!*" {
-            set cmd [string range $choice 3 end]
-            execl with-env-user [list with-term-emu {*}$cmd]
-        }
-        "!!*" {
-            set cmd [string range $choice 2 end]
-            execl with-env-user [list with-term-emu with-pause {*}$cmd]
-        }
-        default {
-            execl run-menu [list "-e" "Error: Unrecoginzed pattern: $choice"]
-        }
-    }
+    execl dispatch-action [list $choice]
 }
 
 ----
