--- a/README.adoc
+++ b/README.adoc
@@ -422,14 +422,13 @@ if [ "${WITHOUT_TERMUX}" = "1" ]; then
 	unset WITHOUT_TERMUX
 	exec term-emu "/usr/bin/env with-env-user $*"
 else
-	session_name_=$(echo "$@" | sed "s/:/COLON/g ; s/\./DOT/g ; s/(/OPEN/g ; s/)/CLOSE/g")
-	window_name_="${session_name_}"
+	window_name_=$(echo "$@" | sed "s/:/COLON/g ; s/\./DOT/g ; s/(/OPEN/g ; s/)/CLOSE/g")
 	if [ "${DETACH_TERMUX}" = "1" ]; then
 		unset DETACH_TERMUX
-		exec term-emu with-termux -s "${session_name_}" -n "${window_name_}" "with-env-user $*" \; detach
+		exec term-emu with-termux -n "${window_name_}" "with-env-user $*" \; detach
 	else
 		unset DETACH_TERMUX
-		exec term-emu with-termux -s "${session_name_}" -n "${window_name_}" "with-env-user $*"
+		exec term-emu with-termux -n "${window_name_}" "with-env-user $*"
 	fi
 fi
 
