fix: Catch when closing fd @ run-app-launcher

--- a/README.adoc
+++ b/README.adoc
@@ -2736,7 +2736,7 @@ proc getChoice {history execs} {
     puts -nonewline $fd $execs
     flush $fd
     set res [read $fd]
-    close $fd
+    catch {close $fd}
     return [string trim $res]
 }
 
