--- a/README.adoc
+++ b/README.adoc
@@ -1106,6 +1106,7 @@ EOF
 config-keymap-altgr
 config-logitech-trackball-marble-righty
 # config-logitech-trackball-marble-lefty
+config-logitech-mx-ergo-right
 config-logitech-g300-mouse
 config-logitech-g502-mouse
 config-lenovo-n700-mouse
@@ -1130,6 +1131,7 @@ newline
 setxkbmap us -variant dvp -option lv3:ralt_alt
 
 config-logitech-g502-mouse
+config-logitech-mx-ergo-right
 
 ----
 
@@ -1375,6 +1377,51 @@ for mouse_ in ${ids_}; do
 	xinput set-prop "${mouse_}" "Device Accel Profile" 7
 	xinput set-prop "${mouse_}" "Device Accel Constant Deceleration" 2
 	xinput set-prop "${mouse_}" "Device Accel Adaptive Deceleration" 1
+done
+
+----
+
+==== `config-logitech-mx-ergo-right`
+
+.file::config-logitech-mx-ergo-right
+[source,sh]
+----
+#!/bin/zsh
+
+setopt shwordsplit
+
+# http://www.x.org/wiki/Development/Documentation/PointerAcceleration/
+
+##############################################################################
+
+ids_=$( \
+	xinput list \
+	| grep "Logitech MX Ergo" \
+	| cut -d'=' -f2 \
+	| awk '{ print $1 }' \
+)
+
+test -z "${ids_}" && exit 0
+
+##############################################################################
+
+do-notify "Configuring Logitech MX Ergo
+* Set natural scrolling
+* Tuning mouse movement"
+
+for mouse_ in ${ids_}; do
+	echo "${mouse_}"
+
+	{
+		xinput set-prop "${mouse_}" "libinput Natural Scrolling Enabled" 1 &>/dev/null
+	} || {
+		xinput set-prop "${mouse_}" "Evdev Scrolling Distance" -1, -1, 1 &>/dev/null
+		xinput set-prop "${mouse_}" "Evdev Axis Inversion" 1, 1 &>/dev/null
+	}
+
+	# xinput set-prop "${mouse_}" "Device Accel Profile" 7
+	# xinput set-prop "${mouse_}" "Device Accel Constant Deceleration" 2
+	# xinput set-prop "${mouse_}" "Device Accel Adaptive Deceleration" 1
 done
 
 ----
