--- a/README.adoc
+++ b/README.adoc
@@ -3998,6 +3998,8 @@ sed $n_lines^q
 
 === `update-openjdk-8-font-patched` - for Debian/Ubuntu
 
+TODO: Archive
+
 Updates OpenJDK 8 with font rendering patch from PPA
 [no1wantdthisname](https://launchpad.net/~no1wantdthisname/+archive/ubuntu/openjdk-fontfix).
 
