--- a/README.adoc
+++ b/README.adoc
@@ -164,12 +164,12 @@ exec "$@"
 ----
 #!/usr/bin/env bash-pure
 
-if [ -f "~/.env" ]; then
-	. ~/.env
-fi
-if [ -f "~/.env-prog" ]; then
-	. ~/.env-prog
-fi
+# if [ -f "~/.env" ]; then
+# 	. ~/.env
+# fi
+# if [ -f "~/.env-prog" ]; then
+# 	. ~/.env-prog
+# fi
 
 exec bash "$@"
 
