--- a/README.adoc
+++ b/README.adoc
@@ -3818,6 +3818,32 @@ print(get_python_lib())
 
 ----
 
+=== `query-password` - queries password from a password manager
+
+The password is printed to stdout without an end-of-line character.
+
+TODO: Help text
+
+.file::query-password
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+if {[catch {exec report-missing-executables kwalletcli KWallet-CLI >@ stdout 2>@ stderr <@ stdin}]} {
+    exit 1
+}
+
+set folder Passwords
+set entry [lindex $::argv 0]
+
+if {[catch {exec kwalletcli -f $folder -e $entry >@ stdout <@ stdin}]} {
+    # Password doesn't exist
+    exec kwalletcli_getpin -p "Set password" -t "Password not yet set. Please set it now" -Y "_Set" | kwalletcli -f $folder -e $entry -P
+    exec kwalletcli -f $folder -e $entry >@ stdout <@ stdin
+}
+
+----
+
 === `qrcode` - creates QR code from a string
 
 .file::qrcode
