--- a/README.adoc
+++ b/README.adoc
@@ -4074,6 +4074,76 @@ foreach display $displays {
 
 ----
 
+=== `event/` - event-based triggers
+
+Collection of executables that get triggered in case of an event
+
+==== `event/watch-change <timeout> <get-state> - <trigger>...` - watches for a change (= 2 different states returned by `<get-state>`) and triggers a script
+
+TODO: Help text and example
+
+.file::event/watch-change
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+proc slurp {cmds} {
+    set fd [open [list | {*}$cmds] r]
+    set data [read $fd]
+    close $fd
+
+    return $data
+}
+
+set separatorPos [lsearch $::argv "-"]
+set TIMEOUT [lindex $::argv 0]
+set GET_STATE_CMD [lrange $::argv 1 [expr {$separatorPos - 1}]]
+set TRIGGER_CMD [lrange $::argv [expr {$separatorPos + 1}] end]
+
+if {$TIMEOUT eq "" || $GET_STATE_CMD eq "" || $TRIGGER_CMD eq ""} {
+    puts stderr "Timeout, get-state, and trigger must exist"
+    exit 2
+}
+
+set state [slurp $GET_STATE_CMD]
+while {1} {
+    after $TIMEOUT
+    set newState [slurp $GET_STATE_CMD]
+    if {$newState ne $state} {
+        catch {exec {*}$TRIGGER_CMD <@ stdin >@ stdout 2>@ stderr}
+    }
+    set state $newState
+}
+
+----
+
+==== `event/get-monitors-states` - TODO
+
+.file::event/get-monitors-states
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+# /sys/class/drm/*/status
+
+proc slurp {cmds} {
+    set fd [open [list | {*}$cmds] r]
+    set data [read $fd]
+    close $fd
+
+    return $data
+}
+
+proc getCurrentState {} {
+    set paths [glob /sys/class/drm/*/status]
+    set statuses [slurp [list cat {*}$paths]]
+    return "{$paths} {$statuses}"
+}
+
+puts [getCurrentState]
+
+----
+
 === `sudo-askpass` - runs `sudo` with a graphical askpass program, also preserving some environment variables
 
 .file::sudo-askpass
