--- a/README.adoc
+++ b/README.adoc
@@ -365,6 +365,40 @@ exec ${PLAN9}/bin/9 "$@"
 
 ----
 
+=== `with-retry <timeout> <times> <cmd>...` - runs a command, retrying on error
+
+TODO: Help text
+
+.file::with-retry
+[source,tcl]
+----
+#!/usr/bin/env tclsh
+
+set timeout [lindex $::argv 0]
+set times [lindex $::argv 1]
+set cmd [lrange $::argv 2 end]
+
+proc execCmd {cmd} {
+    return [exec {*}$cmd <@ stdin >@ stdout 2>@ stderr]
+}
+
+if {[catch {execCmd $cmd}]} {
+    while {$times > 0} {
+        puts stderr [format "Command failed, retrying (times=%s) after %sms" $times $timeout...]
+        after $timeout
+        if {[catch {execCmd $cmd}]} {
+            incr times -1
+        } else {
+            exit 0
+        }
+    }
+    exit 1
+} else {
+    exit 0
+}
+
+----
+
 === `9-term` - runs Plan9port terminal emulator within a 9 environment
 
 .file::9-term
@@ -379,6 +413,7 @@ exec ${PLAN9}/bin/9 "$@"
 exec 9 9term $*
 
 ----
+
 === `rc` - runs RC shell with Plan 9 Port environment
 
 .file::rc
